# -1

./: .gitignore  CORE_FILES_v2.0.txt  DOCUMENTATION_INDEX.md  FORMAT_SPECIFICATIONS_INDEX.md  INPUT_FORMAT_SPECIFICATION.md  MOBILE_DEPLOYMENT_GUIDE.md  NEXT_TASKS_ROADMAP.md  OUTPUT_FORMAT_SPECIFICATION.md  PROJECT_README_COMPLETE.md  PROJECT_SUMMARY.md  README.md  SNPE_VERIFICATION_REPORT.md  TASK_COMPLETION_SUMMARY.md  VERSION_v2.0_FINAL.md  anomaly_classifier.dlc  anomaly_classifier.onnx  anomaly_classifier.pth  anomaly_detector.dlc  anomaly_detector.onnx  anomaly_detector.pth  build_mobile_inference.sh  comprehensive_performance_test.py  comprehensive_test.sh  convert_end_to_end_to_dlc.py  convert_latest_models_to_dlc.py  convert_pytorch_to_dlc.py  convert_realistic_end_to_end_to_dlc.py  convert_separate_models_to_dlc.py  convert_to_dlc.sh  convert_to_dlc_complete.sh  convert_to_dlc_simple.sh  debug_model.py  dlc_mobile_inference  dlc_mobile_inference.cpp  end_to_end_anomaly_classifier.onnx  end_to_end_anomaly_classifier.pth  end_to_end_anomaly_detector.onnx  end_to_end_anomaly_detector.pth  example_dlc_outputs.json  example_normal_input.json  (+74 more)
2.26.2.240911/: GENIE_README.txt  NOTICE.txt  NOTICE_WINDOWS.txt  QNN_ReleaseNotes.txt  QNN_TFLITE_DELEGATE_NOTICE.txt  QNN_TFLITE_DELEGATE_ReleaseNotes.txt  ReleaseNotes.txt  ReleaseNotesWindows.txt  sdk.yaml
2.26.2.240911/examples/SNPE/NativeCpp/SampleCode_CAPI/Psnpe/OutputAsyncMode/: CMakeLists.txt  Makefile.x86_64-linux-clang  main.cpp
config/: project_paths.conf  system_config.json
guide/: cpp_files_functionality.md  cpp_verification_guide.md  end_to_end_model_workflow.md  model_architecture_guide.md  model_runtime_explanation.md  python_model_training_guide.md  quick_cpp_verification.md  simulation_guide.md  two_tier_detection_guide.md  手动测试指南.md  数据特征工程图表.md  模型原理简明版.md  模型原理详细说明.md  模型集成指南.md
models/: anomaly_classifier.dlc  anomaly_classifier.onnx  anomaly_detector.dlc  anomaly_detector.onnx  best_anomaly_classifier.pth  best_anomaly_detector.pth  best_nn_classifier.pth  network_anomaly_classifier.dlc  network_anomaly_classifier.onnx  network_model.py  nn_classifier_init.pth  rf_classifier.onnx  simple_nn.dlc  simple_nn.onnx  two_stage_models.py
scripts/: analyze_all_scenarios_errors.py  analyze_anomaly_features.py  analyze_training_data_distribution.py  check_labels.py  create_better_test_scenarios.py  debug_autoencoder.py  debug_feature_extraction.py  debug_feature_mapping.py  debug_reconstruction_error.py  deploy.py  detailed_feature_analysis.py  fix_csv.py  generate_6d_training_data.py  generate_data.py  generate_fixed_training_data.py  generate_improved_6d_data.py  generate_initial_data.py  generate_realistic_test_data.py  generate_realistic_training_data.py  generate_simple_6d_data.py  generate_training_data_v2.py  generate_training_data_with_features.py  interactive_tester.py  prepare_training_data.py  quick_test_fix.py  retrain_autoencoder_fixed.py  retrain_improved_model.py  (+9 more)
(+3544 files in other folders)
